# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.668 2008-06-19 20:50:13 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta3 (2008/06/??)
 - (2008/06/19) Fixed bug# 3005 - AJAX functionality is not working in phone
    and email ticket for Service and SLA.
 - (2008/06/19) Added article TimeUnit support to automatically add time
    units to ticket by using generic agent (also usable over admin
    interface).
 - (2008/06/19) Added CleanUp() to Kernel::System::Cache to clean up/remove
    all cache files.
 - (2008/06/19) Fixed bug# 2957 - Merged ticket not canceled in link table.
 - (2008/06/19) Simplifed the new link mechanism.
 - (2008/06/19) Added cleanup of old cache files and cleanup of non existing
    TicketIDs in ticket_watcher and ArticleIDs in article_flag table (there
    was a bug, this reference entries got not deleted by deleting a ticket
    or article, e. g. by GenericAgent) to scripts/DBUpgrade-to-2.3.pl.
 - (2008/06/13) Added extra config option for "CheckMXRecord" config option
    to configure extra name servers for MX lookups.
 - (2008/06/11) Fixed bug# 2980 - Getting cron emails (Use of uninitialized
    value in numeric gt (>) at) every time if IMAP and IMAPs gets executed.
 - (2008/06/11) Fixed bug# 2979 - Unable to work on ticket, get error message
    "no permission" even with rw permissions on the ticket. Fixed recoding
    issue.
 - (2008/06/05) Fixed bug# 2969 - Unable to get past login screen - undefined
    value as a HASH reference at
    Kernel/System/Ticket/IndexAccelerator/RuntimeDB.pm line 57.
 - (2008/06/05) Fixed bug# 2960 - DBUpdate-to-2.3.pl script possibly fails.
 - (2008/06/05) Added enhancement bug# 2964 - Add hash sort to data dumper